--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="REForms: A React-Redux forms library for the people!" />
     <meta name="author" content="Peter Morawiec" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link href="css/e0b5f2c9ee53ee6541ab.min.css" rel="stylesheet"></head>
+  <link href="css/02a6cb7ea58c1cbb301c.min.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script src="e0b5f2c9ee53ee6541ab.min.js"></script></body>
+  <script type="text/javascript" src="02a6cb7ea58c1cbb301c.min.js"></script></body>
 </html>
